# CuPAAL

./: .dockerignore  .gitignore  A_matrix.dot  A_matrix_transposed.dot  B_matrix.dot  CMakeLists.txt  Dockerfile  README.md  X_matrix_mult.dot  alpha0.dot  alpha4.dot  beta1.dot  compose.yaml  cupaal_model.txt  cupaal_training_set.txt  data_python.csv.txt  entrypoint.sh  example-model-output.txt  example-model.txt  example-observations.txt  experiment.py  experiment.sh  experiment2.sh  jajapy_part.py  main.cpp  manual_A.dot  manual_B.dot  manual_B_renamed.dot  manual_result.dot  matrix.txt  model.cpp  omega0.dot  omega1.dot  omega2.dot  omega3.dot  omega4.dot  parameter_experiment.py  polling.prism  scalability_experiment.py  tau.dot  (+2 more)
.devcontainer/: Dockerfile  devcontainer.json
bindings/: cupaal-bindings.cpp  cupaal.py
examples/: 120-states-initial.txt  deprecated_notes.cpp  experiment_hundred.cpp  experiment_twenty.cpp
models/: polling.prism  tandem.sm
models/accuracy_experiment/ctmc/: cluster.v1.prism  embedded.v1.prism  kanban.v1.prism  mapk_cascade.v1.prism
models/accuracy_experiment/dtmc/: herman.9.v1.prism  leader_sync.3-2.v1.prism  leader_sync.3-3.v1.prism  leader_sync.3-4.v1.prism  leader_sync.4-2.v1.prism  leader_sync.4-3.v1.prism  leader_sync.4-4.v1.prism  leader_sync.5-2.v1.prism  leader_sync.5-3.v1.prism  leader_sync.5-4.v1.prism
models/scalability_experiment/: leader_sync.3-2.v1.prism  leader_sync.3-3.v1.prism  leader_sync.3-4.v1.prism  leader_sync.4-2.v1.prism  leader_sync.4-4.v1.prism  leader_sync.5-2.v1.prism  leader_sync.5-3.v1.prism  polling.3.v1.prism  polling.4.v1.prism  polling.5.v1.prism  polling.6.v1.prism  polling.7.v1.prism
src/cupaal/: Cudd_extensions.cpp  Cudd_extensions.h  baum.cpp  baum.h  baum_welch.cpp  baum_welch.h  cudd_extensions.cpp  cudd_extensions.h  helpers.cpp  helpers.h
step_results/: alpha_1.dot  alpha_2.dot  alpha_3.dot  alpha_4.dot  alpha_temp_0_1.dot  alpha_temp_0_2.dot  alpha_temp_0_3.dot  alpha_temp_0_4.dot  alpha_temp_1_1.dot  alpha_temp_1_2.dot  alpha_temp_1_3.dot  alpha_temp_1_4.dot  transition_states.dot
